--- a/index.html
+++ b/index.html
@@ -8,13 +8,20 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <h1>Olga Sessions</h1>
+    <h1 class="center heading">Olga Sessions</h1>
     <img src="pictures/profile-pic1.jpg" alt="user_pic" height="250px" />
     <section id="about">
-      <h2>About</h2>
-      <p>
+      <h2 class="center">About</h2>
+      <p class="par">
         My greatest passion is software engineering, and I am actively learning
         and growing my skills to build a career in technology. I hold a
         Bachelors degree in Hospitality and have worked in hotels across
@@ -26,8 +33,8 @@
       </p>
     </section>
     <section id="experience">
-      <h2>Experience</h2>
-      <ul>
+      <h2 class="center experience">Experience</h2>
+      <ul class="center">
         <li>HTML/CSS</li>
         <li>Figma</li>
         <li>JavaScript</li>
@@ -38,23 +45,23 @@
       </ul>
     </section>
     <section id="connect">
-      <h2>Connect</h2>
-      <ul>
+      <h2 class="center">Connect</h2>
+      <ul class="icons">
         <li>
           <a
             href="https://www.linkedin.com/in/olga-sessions"
             target="_blank"
             rel="noopener noreferer"
-            ><i class="fab fa-linkedin fa-2x"></i> Linkedin</a
-          >
+            ><i class="fab fa-linkedin fa-2x"></i
+          ></a>
         </li>
         <li>
           <a
             href="https://github.com/Olenka2101"
             target="_blank"
             rel="noopener noreferer"
-            ><i class="fab fa-github fa-2x"></i>GitHub</a
-          >
+            ><i class="fab fa-github fa-2x"></i
+          ></a>
         </li>
       </ul>
     </section>
