formatted styles added

--- a/index.html
+++ b/index.html
@@ -17,33 +17,60 @@
     />
   </head>
   <body>
-    <h1 class="center heading">Olga Sessions</h1>
-    <img src="pictures/profile-pic1.jpg" alt="user_pic" height="250px" />
-    <section id="about">
-      <h2 class="center">About</h2>
-      <p class="par">
-        My greatest passion is software engineering, and I am actively learning
-        and growing my skills to build a career in technology. I hold a
-        Bachelors degree in Hospitality and have worked in hotels across
-        different countries, where I gained valuable experience in customer
-        service, cultural awareness, and problem solving. Currently working in
-        logistics, I bring adaptability, a global perspective, and a dedication
-        to continuous learning qualities, also shaped by my love of travel and
-        discovering new experiences.
-      </p>
-    </section>
-    <section id="experience">
-      <h2 class="center experience">Experience</h2>
-      <ul class="center">
-        <li>HTML/CSS</li>
-        <li>Figma</li>
-        <li>JavaScript</li>
-        <li>GSAP</li>
-        <li>Bootstrap</li>
-        <li>Can She Code Inc. IT classes</li>
-        <li>IT Help Desk Support</li>
-      </ul>
-    </section>
+    <header>
+      <nav>
+        <ul class="nav_bar">
+          <li><a href="#about">About</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#connect">Connect</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section id="skills">
+        <h2 class="center space">Skills</h2>
+        <p class="center">Here will be my skills listed</p>
+      </section>
+      <section id="projects">
+        <h2 class="center">Projects</h2>
+        <p class="center">Here will be my projects listed</p>
+        <ul id="projects_list">
+          <li>Project one</li>
+          <li>Project two</li>
+          <li>Project three</li>
+          <li>Project four</li>
+        </ul>
+      </section>
+      <h1 class="center heading">Olga Sessions</h1>
+      <img src="pictures/profile-pic1.jpg" alt="user_pic" height="250px" />
+      <section id="about">
+        <h2 class="center">About</h2>
+        <p class="par">
+          My greatest passion is software engineering, and I am actively
+          learning and growing my skills to build a career in technology. I hold
+          a Bachelors degree in Hospitality and have worked in hotels across
+          different countries, where I gained valuable experience in customer
+          service, cultural awareness, and problem solving. Currently working in
+          logistics, I bring adaptability, a global perspective, and a
+          dedication to continuous learning qualities, also shaped by my love of
+          travel and discovering new experiences.
+        </p>
+      </section>
+      <section id="experience">
+        <h2 class="center experience">Experience</h2>
+        <ul class="center">
+          <li>HTML/CSS</li>
+          <li>Figma</li>
+          <li>JavaScript</li>
+          <li>GSAP</li>
+          <li>Bootstrap</li>
+          <li>Can She Code Inc. IT classes</li>
+          <li>IT Help Desk Support</li>
+        </ul>
+      </section>
+    </main>
     <section id="connect">
       <h2 class="center">Connect</h2>
       <ul class="icons">
