--- a/index.html
+++ b/index.html
@@ -30,21 +30,26 @@
     </header>
     <main>
       <section id="skills">
-        <h2 class="center space">Skills</h2>
-        <p class="center">Here will be my skills listed</p>
+        <h2 class="center">Skills</h2>
+        <ul class="center skills_background">
+          <li>JavaScript</li>
+          <li>HTML/CSS</li>
+          <li>Figma</li>
+          <li>GSAP</li>
+          <li>Bootstrap</li>
+          <li>GitHub</li>
+          <li>IT Help Desk Support</li>
+        </ul>
       </section>
       <section id="projects">
         <h2 class="center">Projects</h2>
         <p class="center">Here will be my projects listed</p>
         <ul id="projects_list">
-          <li>Project one</li>
-          <li>Project two</li>
-          <li>Project three</li>
-          <li>Project four</li>
+          <li></li>
         </ul>
       </section>
       <h1 class="center heading">Olga Sessions</h1>
-      <img src="pictures/profile-pic1.jpg" alt="user_pic" height="250px" />
+      <img src="pictures/profile-pic1.jpg" alt="user_pic" height="300px" />
       <section id="about">
         <h2 class="center">About</h2>
         <p class="par">
@@ -59,16 +64,84 @@
         </p>
       </section>
       <section id="experience">
-        <h2 class="center experience">Experience</h2>
-        <ul class="center">
-          <li>HTML/CSS</li>
-          <li>Figma</li>
-          <li>JavaScript</li>
-          <li>GSAP</li>
-          <li>Bootstrap</li>
-          <li>Can She Code Inc. IT classes</li>
-          <li>IT Help Desk Support</li>
-        </ul>
+        <h2 class="center">Experience</h2>
+        <!-- First description start -->
+        <div class="container">
+          <div class="job_title">
+            <p class="bold_txt">Logistics Coordinator</p>
+            <p>Mountain Logistics</p>
+          </div>
+          <div class="date_location">
+            <p class="bold_txt">August 2023 - Present</p>
+            <p>Myrtle Beach, SC</p>
+          </div>
+        </div>
+        <div class="job_descr">
+          <p class="bullet">
+            Coordinated military freight logistics across the U.S., managing
+            communication with 60+ stakeholders.
+          </p>
+
+          <p class="bullet">
+            Developed prioritization, documentation, and problem-solving skills
+            in a high-pressure, time-sensitive environment.
+          </p>
+        </div>
+        <!-- First description end -->
+        <!-- Second description start -->
+        <div class="container">
+          <div class="job_title">
+            <p class="bold_txt">Rental Property Manager</p>
+            <p>Clear Water property Management</p>
+          </div>
+          <div class="date_location">
+            <p class="bold_txt">January 2010 - March 2023</p>
+            <p>Sumter, SC</p>
+          </div>
+        </div>
+        <div class="job_descr">
+          <p class="bullet">
+            Oversee operations of residential rental properties, including rent
+            collection, financial management, and tenant relations.
+          </p>
+
+          <p class="bullet">
+            Advertise vacancies, screen tenants, and manage lease agreements.
+          </p>
+          <p class="bullet">
+            Coordinate property maintenance and repairs, including contractor
+            selection and payment processing.
+          </p>
+        </div>
+        <!-- Second description end -->
+
+        <!-- Third description start -->
+        <div class="container">
+          <div class="job_title">
+            <p class="bold_txt">Front Office Manager</p>
+            <p>Plus Prague</p>
+          </div>
+          <div class="date_location">
+            <p class="bold_txt">January 2008 - October 2009</p>
+            <p>Prague, Czech Republic</p>
+          </div>
+        </div>
+        <div class="job_descr">
+          <p class="bullet">
+            Supervised and trained a team of 6 front desk associates, improving
+            customer satisfaction scores by 20%.
+          </p>
+
+          <p class="bullet">
+            Implemented new scheduling and visitor management system, reducing
+            wait times by 30%.
+          </p>
+          <p class="bullet">
+            Handled client escalations and coordinated with internal departments
+            to ensure smooth service delivery.
+          </p>
+        </div>
+        <!-- Third description end -->
       </section>
     </main>
     <section id="connect">
@@ -79,7 +152,7 @@
             href="https://www.linkedin.com/in/olga-sessions"
             target="_blank"
             rel="noopener noreferer"
-            ><i class="fab fa-linkedin fa-2x"></i
+            ><i class="fab fa-linkedin fa-fade fa-3x"></i
           ></a>
         </li>
         <li>
@@ -87,7 +160,7 @@
             href="https://github.com/Olenka2101"
             target="_blank"
             rel="noopener noreferer"
-            ><i class="fab fa-github fa-2x"></i
+            ><i class="fab fa-github fa-fade fa-3x"></i
           ></a>
         </li>
       </ul>
