js added, created footer and updated skills / updated mobile adaptation

--- a/index.html
+++ b/index.html
@@ -32,13 +32,6 @@
       <section id="skills">
         <h2 class="center">Skills</h2>
         <ul class="center skills_background">
-          <li>JavaScript</li>
-          <li>HTML/CSS</li>
-          <li>Figma</li>
-          <li>GSAP</li>
-          <li>Bootstrap</li>
-          <li>GitHub</li>
-          <li>IT Help Desk Support</li>
         </ul>
       </section>
       <section id="projects">
@@ -165,5 +158,6 @@
         </li>
       </ul>
     </section>
+    <script src="js/index.js"></script>
   </body>
 </html>
