--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
           <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#connect">Connect</a></li>
+          <li><a href="#messageMe">Message me</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section id="skills">
         <h2 class="center">Skills</h2>
-        <ul class="center skills_background">
-        </ul>
+        <ul class="center skills_background"></ul>
       </section>
       <section id="projects">
         <h2 class="center">Projects</h2>
@@ -157,6 +157,45 @@
           ></a>
         </li>
       </ul>
+    </section>
+    <section id="messageMe">
+      <h2 class="center">Leave a message</h2>
+      <form name="leave_message" action="submit" method="post">
+        <p>
+          <label for="usersName">Name:</label>
+          <input
+            type="text"
+            id="usersName"
+            name="usersName"
+            placeholder=" your name..."
+            required
+          />
+        </p>
+        <p>
+          <label for="usersEmail">Email:</label>
+          <input
+            type="email"
+            id="usersEmail"
+            name="usersEmail"
+            placeholder="your email..."
+            required
+          />
+        </p>
+        <p>
+          <label for="usersMessage">Message:</label>
+          <textarea
+            id="usersMessage"
+            name="usersMessage"
+            placeholder="your message..."
+            required
+          ></textarea>
+        </p>
+        <button class="button" type="submit">Submit your message</button>
+      </form>
+    </section>
+    <section id="messages">
+      <h2>Messages</h2>
+      <ul></ul>
     </section>
     <script src="js/index.js"></script>
   </body>
