--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
       </section>
       <section id="projects">
         <h2 class="center">Projects</h2>
-        <p class="center">Here will be my projects listed</p>
-        <ul id="projects_list">
-          <li></li>
-        </ul>
+        <p class="center"></p>
+        <ul id="projects_list"></ul>
       </section>
       <h1 class="center heading">Olga Sessions</h1>
       <img src="pictures/profile-pic1.jpg" alt="user_pic" height="300px" />
